--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,14 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
 	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    
+    compileOnly "org.projectlombok:lombok:1.16.16"
 
     testCompile 'junit:junit:4.12'
+}
+
+test {
+    testLogging {
+        exceptionFormat = 'full'
+        showStandardStreams = true
+    }
 }
