Add Coveralls and JaCoCo stuff

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
-apply plugin: 'java'
+plugins {
+	id 'java'
+    id 'jacoco'
+    id 'com.github.kt3k.coveralls' version '2.6.3'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
+}
 
 repositories {
     jcenter()
